--- a/lncs.css
+++ b/lncs.css
@@ -17,8 +17,8 @@ widows: 3;
 }
 
 thead { display: table-header-group; }
-tr, img { page-break-inside: avoid; }
-img { max-width: 100% !important; }
+tr, img, object { page-break-inside: avoid; }
+img, object { max-width:100% !important; height:auto !important;}
 
 @page {
 margin:47mm 0;
@@ -234,7 +234,10 @@ content:"";
 #categories-and-subject-descriptors h2:before,
 #keywords h2:before,
 #acknowledgements h2:before,
-#references h2:before {
+#references h2:before,
+#appendix h2:before,
+#appendix h3:before,
+#appendix h4:before {
 content: "";
 }
 
