--- a/lncs.css
+++ b/lncs.css
@@ -56,7 +56,7 @@ background-color:#FFFFFF;
 color:#000000;
 font-family:"Latin Modern Roman", "Computer Modern", cmr10, "Times New Roman", serif;
 font-size:13px;
-line-height:1.2;
+line-height:1.215;
 position:relative;
 margin:0 auto;
 width:122mm;
@@ -91,7 +91,7 @@ counter-increment: section;
 counter-reset: sub-section;
 }
 h2:before {
-content: counter(section) "\00a0\00a0\00a0\00a0";
+content: counter(section) "\00a0\00a0\00a0\00a0\00a0";
 }
 
 h3 {
@@ -217,7 +217,7 @@ margin-bottom:1em;
 
 #authors dd,
 #authors li {
-display:inline;
+display:inline !important;
 margin-bottom:0;
 }
 
@@ -293,6 +293,22 @@ margin-bottom:1em;
 
 .figure p {
 text-indent:0;
+text-align:left;
+}
+
+.figure-column-2 {
+-webkit-column-count:2;
+-webkit-column-width:47.5%;
+-webkit-column-gap:5%;
+-moz-column-count:2;
+-moz-column-width:47.5%;
+-moz-column-gap:5%;
+column-count:2;
+column-column-width:47.5%;
+column-gap:5%;
+}
+.figure-column-2 .figure {
+margin-top:0;
 }
 
 #abstract, ol, ul, p, dd {
