--- a/lncs.css
+++ b/lncs.css
@@ -5,7 +5,40 @@
  * @link      http://csarven.ca/
  */
 
-* { margin:0; padding:0; background: transparent !important; color: #000 !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; }
+/*
+LNCS template styles: http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0
+
+Computer Modern Unicode fonts are from http://canopus.iacp.dvo.ru/~panov/cm-unicode/ with X11 License.
+*/
+
+@font-face {
+font-family: "CMU Serif";
+src: local("CMU Serif"), url("cmunrm.otf");
+}
+@font-face {
+font-family: "CMU Serif Bold";
+src: local("CMU Serif Bold"), url("cmunbx.otf");
+font-weight: bold !important;
+}
+@font-face {
+font-family: "CMU Serif Italic";
+src: local("CMU Serif Italic"), url("cmunti.otf");
+font-style: italic, oblique !important;
+}
+@font-face {
+font-family: "CMU Serif Bold Italic";
+src: local("CMU Serif Bold Italic"), url("cmunbi.otf");
+font-weight: bold;
+font-style: italic, oblique;
+}
+@font-face {
+font-family: "CMU Serif Monospace";
+src: local("CMU Serif Monospace"), url("cmuntt.otf");
+}
+
+* { margin:0; padding:0; text-shadow: none !important; filter:none !important; -ms-filter: none !important; }
+*:not(button):not(mark) { background: transparent !important; color: #000 !important; }
+.note { background:#ddd !important; }
 img { display:block; border:0; }
 a abbr { cursor: pointer; border-bottom:0; }
 table { border-collapse:collapse; }
@@ -24,8 +57,15 @@ object[width="640"] { max-width:480px !important; }
 object[height="480"] { height:360px !important; }
 object[height="415"] { height:311px !important; }
 
+object.slides { display:none; }
 
 @page {
+/*Standard ISO A4 paper dimensions are:*/
+/*210mm x 297mm*/
+/*8.27" x 11.69"*/
+/*Equivalent A4 paper dimensions in pixels at 300 DPI and 72 DPI respectively are:*/
+/*2480 pixels x 3508 pixels (print resolution)*/
+/*595 pixels x 842 pixels (screen resolution)*/
 margin:47mm 0;
 /*margin:40mm 0;*/
 }
@@ -52,16 +92,26 @@ word-break:normal;
 
 /*html { font-size: 13px; }*/
 body {
-background-color:#FFFFFF;
 color:#000000;
-font-family:"Latin Modern Roman", "Computer Modern", cmr10, "Times New Roman", serif;
+font-family: "CMU Serif", serif;
 font-size:13px;
 line-height:1.22;
 position:relative;
 margin:0 auto;
 width:122mm;
 height:193mm;
+}
 
+
+h1,h2,h3,h4,h5,h6, strong, dt {
+font-family: "CMU Serif Bold", sans-serif !important;
+}
+em, address {
+font-family: "CMU Serif Italic", sans-serif !important;
+font-style:normal !important;
+}
+code, pre, kbd, button {
+font-family: "CMU Serif Monospace", monospace !important;
 }
 
 p {
@@ -88,22 +138,36 @@ h6 { font-size:13px; }
 h2 {
 margin-top:1.25em;
 margin-bottom:0.75em;
+}
+
+section:not([id=abstract]):not([id=keywords]):not([id=references]),
+.toc li {
 counter-increment: section;
 counter-reset: sub-section;
 }
-h2:before {
-content: counter(section) "\00a0\00a0\00a0\00a0\00a0";
-}
-
-h3 {
-margin-top:1.5em;
-margin-bottom:0.5em;
+section:not([id=abstract]):not([id=keywords]):not([id=references]) section,
+.toc li li {
 counter-increment: sub-section;
 counter-reset: sub-sub-section;
 }
+section:not([id=abstract]):not([id=keywords]):not([id=references]) section section,
+.toc li li li {
+counter-increment: sub-sub-section;
+counter-reset: sub-sub-sub-section;
+}
+
+*:not([id=abstract]):not([id=keywords]):not([id=references]) h2:before {
+content: counter(section) "\00a0\00a0\00a0\00a0\00a0";
+}
+
 h3:before {
 content: counter(section) "." counter(sub-section) "\00a0\00a0\00a0\00a0";
 }
+h3 {
+margin-top:1.5em;
+margin-bottom:0.5em;
+}
+
 
 h1 + p,
 h2 + p,
@@ -126,14 +190,19 @@ h5:after {
 content: ".";
 }
 h4 + p,
-h5 + p {
+h5 + p,
+h4 + div,
+h5 + div,
+h4 + div p,
+h5 + div p {
 display:inline;
-/*text-align:justify;*/
+text-align:justify;
 
-/*This is a bit hacky.. it appears to work in webkit and maybe it shouldn't */
+/*This is a bit hacky.. it appears to work in Webkit and maybe it shouldn't -- breaking words inappropriately*/
 /*word-break:break-all;*/
 
 /*
+Testing?
 text-justify:distribute;
 word-break:break-all;
 hyphens:auto;
@@ -141,11 +210,31 @@ text-wrap:normal;
 line-break:normal;
 */
 }
+h4 + p + p,
+h5 + p + p,
+h4 + div p + p,
+h5 + div p + p {
+display:block;
+}
 
-h4 + p:after,
-h5 + p:after {
+
+
+h3 + div section:before {
 content:"\A";
 white-space:pre;
+}
+
+h4 + p:after,
+h5 + p:after,
+h4 + div p:after,
+h5 + div p:after,
+section + p:before {
+content:"\A";
+white-space:pre;
+}
+
+section + p:before {
+text-indent:0;
 }
 
 * + h4:before,
@@ -187,22 +276,29 @@ font-family:monospace;
 
 
 #authors {
-margin:0 auto 2.5em -3.05%;
+margin:0 auto 2.5em -4%;
 text-align:center;
-width:106.1%;
+width:107%;
 }
 
 #authors dl {
 line-height:1;
 }
 
-#author_emails,
-#author_orgs,
-#abstract p {
+#author_orgs *,
+#author_uris *,
+#abstract *,
+#document-identifier *,
+#document-submitted *,
+#document-license *,
+#document-purpose *,
+#keywords *,
+#categories-and-subject-descriptors * {
 font-size:12px;
 }
 
-#author_emails {
+#author_emails,
+#author_uris {
 font-family:monospace;
 font-size:11px;
 }
@@ -226,12 +322,14 @@ margin-bottom:0;
 
 #authors dd:after,
 #author_emails li:after,
-#author_orgs li:after {
+#author_orgs li:after,
+#author_uris li:after {
 content:", ";
 }
 #authors dd:last-child:after,
 #author_emails li:last-child:after,
-#author_orgs li:last-child:after {
+#author_orgs li:last-child:after,
+#author_uris li:last-child:after {
 content:"";
 }
 #authors sup {
@@ -353,6 +451,10 @@ margin-left:0;
 text-align:justify;
 }
 
+p + dl {
+margin-top:1.25em;
+}
+
 dt {
 font-weight:bold;
 margin-bottom:0.5em;
@@ -409,12 +511,6 @@ text-align:center;
 margin:0 1cm 1em;
 }
 
-#abstract h2,
-#document-identifier  h2,
-#categories-and-subject-descriptors  h2,
-#keywords h2 {
-font-size:13px;
-}
 
 #authors dt {
 display:none;
@@ -448,7 +544,7 @@ content:"";
 
 #categories-and-subject-descriptors h2,
 #keywords h2,
-#document-identifier h2 {
+#document-identifier dt {
 text-transform:capitalize;
 }
 
@@ -477,9 +573,13 @@ display:none;
 }
 
 
-/*Bring these back to life*/
 #document-purpose,
 #document-submitted,
 #document-license {
 display:none;
+}
+#document-purpose.on,
+#document-submitted.on,
+#document-license.on {
+display:block;
 }
